@@ -831,17 +831,27 @@ void pic_processor::disassemble (int start_address, int end_address)
 	  inst = bpi->replaced;
 	}
 
-      if((files != 0) && (use_src_to_disasm))
+      //if((files != 0) && (use_src_to_disasm))
+      if(_files && use_src_to_disasm)
 	{
+	  char buf[256];
+
+	  _files->ReadLine(program_memory[i]->file_id,
+			   program_memory[i]->src_line - 1,
+			   buf,
+			   sizeof(buf));
+	  cout << buf;
+
+	  /*
 	  int fid = program_memory[i]->file_id;
 	  char buf[256];
-	  //cout << " in " << files[fid].name << " @line " 
-	  //     << program_memory[i]->src_line << '\n';
+
 	  fseek(files[fid].file_ptr, 
 		files[fid].line_seek[program_memory[i]->src_line - 1],
 		SEEK_SET);
 	  fgets(buf, 256, files[fid].file_ptr);
 	  cout << buf;
+	  */
 	}
       else
 	cout << hex << setw(4) << setfill('0') << i << "  "
@@ -861,7 +871,7 @@ void pic_processor::list(int file_id, int pc_val, int start_line, int end_line)
 {
 
 
-  if((number_of_source_files == 0) || (files == 0))
+  if(!_files || _files->nsrc_files())
     return;
 
   if(pc_val > program_memory_size())
@@ -876,7 +886,7 @@ void pic_processor::list(int file_id, int pc_val, int start_line, int end_line)
   int line,pc_line;
   if(file_id)
     {
-      file_id = lst_file_id;
+      file_id = _files->list_id();
       line = program_memory[pc_val]->get_lst_line();
       pc_line = program_memory[pc->value]->get_lst_line();
     }
@@ -890,14 +900,28 @@ void pic_processor::list(int file_id, int pc_val, int start_line, int end_line)
   start_line += line;
   end_line += line;
 
+  FileContext *fc = (*_files)[file_id];
+  if(fc)
+    return;
+
   if(start_line < 0) start_line = 0;
+
+  if(end_line > fc->max_line())
+    end_line = fc->max_line();
+
+  cout << " listing " << fc->name() << " Starting line " << start_line
+       << " Ending line " << end_line << '\n';
+
+  /*
   if(end_line > files[file_id].max_line)
     end_line = files[file_id].max_line;
 
   cout << " listing " << files[file_id].name << " Starting line " << start_line
        << " Ending line " << end_line << '\n';
+  */
 
-  // Make sure that the file is open
+  // Make sure the file is open
+  /*
   if(files[file_id].file_ptr == 0)
     {
       if(files[file_id].name != 0)
@@ -915,14 +939,23 @@ void pic_processor::list(int file_id, int pc_val, int start_line, int end_line)
 	  return;
 	}
     }
+  */
 
   for(int i=start_line; i<=end_line; i++)
     {
+
       char buf[256];
+
+      _files->ReadLine(program_memory[i]->file_id,
+		       program_memory[i]->src_line - 1,
+		       buf,
+		       sizeof(buf));
+      /*
       fseek(files[file_id].file_ptr, 
 	    files[file_id].line_seek[i],
 	    SEEK_SET);
       fgets(buf, 256, files[file_id].file_ptr);
+      */
 
       if (pc_line == i)
 	cout << "==>";
@@ -946,7 +979,7 @@ pic_processor::pic_processor(void)
 
   pc = 0;
 
-  files = 0;
+  _files = 0;
 
   eeprom = 0;
   config_modes = create_ConfigMode();
